[bugfix] - knobs fails if the first item of the knobs array was a String - output of a range slider on the first fieldset if it has no legend is now fully visible and not trimmed

--- a/src/styles/_knobs.scss
+++ b/src/styles/_knobs.scss
@@ -26,6 +26,7 @@
 }
 
 .knobs {
+  --range-track-color: var(--primaryColor);
   --knobs-gap: 3px;
   --side-pad: 12px;
   --in-easing: cubic-bezier(.75,0,.35,1);
@@ -84,6 +85,12 @@
       opacity: 0;
       transform: translateX(calc(22% * var(--LTR-Bool)));
       overflow: hidden;
+
+      // this allows the output of a range slider to be seen
+      // on the first fieldset if it has no legend
+      &:first-child:not([data-has-legend]){
+        overflow: visible;
+      }
     }
 
     .fieldset__group{
